--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
     "bootstrap": "^4.3.1",
+    "disqus-react": "^1.0.7",
     "gatsby": "^2.18.3",
     "gatsby-image": "^2.2.33",
     "gatsby-plugin-catch-links": "^2.1.17",
